# stream-connection

./: .gitignore  Dockerfile.streamclient  Dockerfile.streamconnection  Dockerfile.streamserver  README.md  streamserver-ingress.yaml
client/: CMakeLists.txt  stream_client.cpp
proto/: streamconnection.grpc.pb.cc  streamconnection.grpc.pb.h  streamconnection.pb.cc  streamconnection.pb.h  streamconnection.proto
server/: CMakeLists.txt  stream_server.cpp
